changed ice cream to english

--- a/responsividade/space-cream-desktop/index.html
+++ b/responsividade/space-cream-desktop/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="page">
         <div class="left-box">
-            <img src="./images/logo1.svg" alt="idesenho de um sorvete de casquinha">
+            <img src="./images/logo1.svg" alt="desenho de um sorvete de casquinha">
             <h1>Space Cream</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, pharetra est in, sagittis lorem.elit.
@@ -27,41 +27,41 @@
         </div>
         <div class="right-box">
             <main>
-                <div class="grup-card">
+                <div class="group-card">
                     <div class="card">
                         <h2>Paletas</h2>
-                        <img src="./images/sorvete1.png" alt="três picoles de framboesa um encima do outro com uma framboesa encima e algumas ao redor">
+                        <img src="./images/sorvete1.png" alt="three raspberry popsicles on top of each other with a raspberry on top and a few around">
                     </div>
                     <div class="card">
                         <h2>Picolés</h2>
-                        <img src="./images/sorvete4.png" alt="uma mão segurando um picoé que tem três sabores e parcialmente coberto por granolas do lado esquerdo">
+                        <img src="./images/sorvete4.png" alt="a hand holding a popsicle that has three flavors and is partially covered in granola on the left side">
                     </div>
                 </div>
                 <div class="grup-card">
                     <div class="card">
                         <h2>Shakes</h2>
-                        <img src="./images/sorvete2.png" alt="um pote de sorvetede vidro em um ambiente escuro com varias frutas caindo em direção a boca do pote">
+                        <img src="./images/sorvete2.png" alt="a glass ice cream pot in a dark environment with various fruits falling towards the mouth of the pot">
                     </div>
                     <div class="card">
                         <h2>Massa</h2>
-                        <img src="./images/sorvete3.png" alt="uma colher de pegar sorvete com uma bola de sorvete de morango">
+                        <img src="./images/sorvete3.png" alt="an ice cream scoop with a scoop of strawberry ice cream">
                     </div>
                 </div>
                 <div class="grup-card">
 
                     <div class="card">
                         <h2>Paletas</h2>
-                        <img src="./images/sorvete1.png" alt="três picoles de framboesa um encima do outro com uma framboesa encima e algumas ao redor">
+                        <img src="./images/sorvete1.png" alt="three raspberry popsicles on top of each other with a raspberry on top and a few around">
                     </div>
                     <div class="card">
                         <h2>Picolés</h2>
-                        <img src="./images/sorvete4.png" alt="uma mão segurando um picoé que tem três sabores e parcialmente coberto por granolas do lado esquerdo">
+                        <img src="./images/sorvete4.png" alt="a hand holding a popsicle that has three flavors and is partially covered in granola on the left side">
                     </div>
                 </div>
             </main>
 
 
-            <footer>fale conosco no instagram <a href="#">@space_cream</a></footer>
+            <footer>contact us on instagram <a href="#">@space_cream</a></footer>
         </div>
 
 
